carousel flickering fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -318,8 +318,8 @@ a {
 
 body {
   /* min-height: 110vh; */
-  background-color: #4ca1af;
-  background-image: linear-gradient(135deg, #4ca1af 0%, #c4e0e5 100%);
+  /* background-color: #4ca1af;
+  background-image: linear-gradient(135deg, #4ca1af 0%, #c4e0e5 100%); */
 }
 
 /* tabs */
